layout colors adjustments

--- a/css/medium.css
+++ b/css/medium.css
@@ -164,8 +164,9 @@ li{
 }
 
 .send-button:hover{
-    background: #BBE1FA;
-    color: #1B262C;
+    color: #0F4C75;
+    background: #FEC260;
+}
 }
 
 
