--- a/css/small.css
+++ b/css/small.css
@@ -142,7 +142,7 @@ ul {
     display: block;
     list-style-type: disc;
     margin-block-start: 1em;
-    margin-block-end: 1em;
+    margin-block-end: 0em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 40px;
@@ -236,12 +236,12 @@ li{
     display: flex;
     justify-content: center;
     background-color: #1B262C;
-    box-shadow: 1px 0.5px 1px 8px  #BBE1FA;
+    box-shadow: 1px 0.5px 1px 2px  #BBE1FA;
 }
 
 .gettoknowme-lp{
     background-color: #1B262C;
-    box-shadow: 1px 0.5px 1px 8px  #BBE1FA;
+    box-shadow: 1px 0.5px 1px 2px  #BBE1FA;
 }
 
 
@@ -284,12 +284,12 @@ li{
 
 .projectsfont-lp{
     background-color: #1B262C;
-    box-shadow: 1px 0.5px 1px 8px  #BBE1FA;
+    box-shadow: 1px 0.5px 1px 2px  #BBE1FA;
 }
 
 .startaproject-lp{
     background-color: #1B262C;
-    box-shadow: 1px 0.5px 1px 8px  #BBE1FA;
+    box-shadow: 1px 0.5px 1px 2px  #BBE1FA;
 }
 
 .interested-lp{
@@ -322,38 +322,54 @@ li{
 
 /*form*/
 
-.form-contactme{
-    padding: 2rem 2rem;
-    max-width: 80rem;
-    width: 95%;
+.form-contactme {
+    padding: 2rem;
+    max-width: 50rem;
+    width: 90%;
     border-radius: 5px;
     background: #1B262C;
-    margin: 5rem auto 5rem auto;
-    box-shadow: 5px 5px 5spx #1B262C;
+    margin: 5rem auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.send-button{
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+.send-button {
     background: #fff;
-    padding: 1rem 1rem;
-    font-size: 1;
+    padding: 1rem 2rem;
+    font-size: 1rem;
     color: #1B262C;
+    border: none;
     border-radius: 5px;
     font-weight: 600;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-.form-contactme-lp > input, textarea{
+.send-button:hover {
+    background-color: #eee;
+}
+
+.textbox-form, textarea {
     border-radius: 5px;
-    border: 4px solid #BBE1FA;
+    border: 2px solid #BBE1FA;
     background: #BBE1FA;
     font-weight: 300;
     width: 100%;
+    padding: 0.5rem;
+}
+
+.textbox-form:focus, textarea:focus {
+    outline: none;
+    border-color: #5bc0de; /* focus color */
 }
 
 /*footer*/
 
 .footer-site-lp{
-    padding: 2rem 2rem;
+    padding: 0.1rem 2rem 2rem 2rem;
     background: #1B262C;
 }
 
