--- a/css/small.css
+++ b/css/small.css
@@ -324,7 +324,9 @@ li{
 }
 
 .interested-lp{
-    padding: 0.5rem 3rem 0rem 3rem;
+    display: flex;
+    justify-content: center;
+    padding: 0.5rem 3rem 0rem 3re
 }
 
 
