--- a/css/medium.css
+++ b/css/medium.css
@@ -138,8 +138,32 @@ li{
 }
 
 
-.ticketBy-project-lp{
-    text-align: center;
+.project-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    margin: 20px 0px 50px 0px;
+    background-color: #1B262C;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .09);
+    padding: 20px 15px;
+    border-radius: 10px;
+}
+
+.project-details-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start; 
+    width: 100%;
+}
+
+.project-image-container {
+    width: 40%; 
+    margin-right: 20px; 
+}
+
+.project-details {
+    width: 60%; 
 }
 
 .startaproject-lp{
