--- a/css/small.css
+++ b/css/small.css
@@ -229,6 +229,8 @@ li{
     padding-top: 25px;
 }
 
+
+
 .lp-image{
     padding-bottom: 2rem;
     padding-right: 3rem;
@@ -267,6 +269,10 @@ li{
 .media-icon{
     width: 55px;
     margin-right: 1rem;
+}
+
+.media-icon:hover{
+    width: 60px;
 }
 
 .apresentation-lp-h1{
@@ -474,8 +480,6 @@ li{
     justify-content: center;
 }
 
-
-
 /*form*/
 
 .form-contactme {
@@ -484,7 +488,7 @@ li{
     width: 90%;
     border-radius: 5px;
     background: #1B262C;
-    margin: 5rem auto;
+    margin: 3rem auto 5rem auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
