--- a/css/small.css
+++ b/css/small.css
@@ -8,19 +8,29 @@ body {
     box-sizing: border-box;
     font-family: 'Karla', sans-serif;
     font-size: 16px;
-    font-weight: 300px;
+    font-weight: 300;
     color: #F1F0E8;
     background-color: #191919;
     position: relative;
     line-height: 1.5;
     overflow-x: hidden;
     overflow-y: scroll;
+    
+    /* Add the following background properties */
+    background-size: 300% 300%;
+    background-image: linear-gradient(-45deg, #191919 0%, #0F4C75 25%, #0F4C75 51%, #D4ADFC 100%);
+    -webkit-animation: AnimateBG 20s ease infinite;
+    animation: AnimateBG 20s ease infinite;
 }
 
-.light-mode {
-    background-color: #F9F9F9;
-    color: #191919;
 
+.light-mode {
+
+    .body-container-lp{
+        background-color: #F9F9F9;
+        color: #191919;
+        background-image: linear-gradient(-45deg, #F9F9F9 0%, #F9F9F9 25%, #F9F9F9 51%, #BBE1FA 100%);
+    }
     .name-lp{
         color:#0F4C75;
     }
@@ -50,6 +60,31 @@ body {
     .textbox-form, textarea {
         background: #fff;
         border: 1px solid #0F4C75;
+    }
+}
+
+
+@-webkit-keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
     }
 }
 
@@ -216,6 +251,22 @@ li{
 
 
 /* main */
+
+.phrase-about-lp{
+    font-size: 1.5em;
+}
+
+.phrase-knowme-lp{
+    font-size: 1.5em;
+} 
+
+.phrase-ticketby-lp{
+    font-size: 1.5em;
+}
+
+.phrase-interest-lp{
+    font-size: 1.5em;
+}
 
 .container-main-div{
     display: flex;
