--- a/css/small.css
+++ b/css/small.css
@@ -254,18 +254,17 @@ li{
 
 .phrase-about-lp{
     font-size: 1.5em;
+    font-weight: 400;
 }
 
 .phrase-knowme-lp{
     font-size: 1.5em;
+    font-weight: 400;
 } 
-
-.phrase-ticketby-lp{
-    font-size: 1.5em;
-}
 
 .phrase-interest-lp{
     font-size: 1.5em;
+    font-weight: 400;
 }
 
 .container-main-div{
